--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
                             Over the years, social media platforms, like Facebook, have begun to take up space in everyday life. Though some people  avoid these impacts more than others, almost everyone is implicated at some point into the circulation of social media, and it affects lives. Some scholars suggest that not interacting with social media is essentially impossible, and is intrinsically existential, presenting a complex place for the user to abide (Boyd 2010, van Dijck 2013, Lagerkvist 2017)
 
                         </p>
-            
+
+                        <br>
+
+                        <p class="text-white-50">The term “networked public” defines spaces that “are publics that are restructured by networked technologies; they are simultaneously a space and a collection of people” (boyd, 2010, p. 41). In this understanding, social media platforms use connective, networked technology in order to facilitate a public where people connect. These platform spaces have “distinct affordances that shape how people engage with these environments” (boyd, p. 39). Platforms like Facebook,  because of its vast connectability and ability to shape interactions within and outside of the platform itself, constitutes a networked public (boyd 2010). 
+                        </p>
+
+                        <br>
+
                         <p class="text-white-50"> As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
                         </p>
                          <p class="text-white-50">
@@ -208,7 +215,7 @@
                         Facebook comes across in messages as somewhat well-intentioned, but promotes these features in order to keep people on the platform. This is a kind of sneaky, nasty rhetoric of commodification here. With these features, grief and loss is portrayed as a reason to post, which keeps users on Facebook, generates content, and supports Facebook as a capitalist platform. This is a platform power that facebook has. 
 
 
-                       At the same time, sometimes it is nice to have this though and can sometimes be cathartic - complex feelings
+                       At the same time, these presents a complexity. For those who have experienced loss, it is sometimes nice to have these memories. 
 
                     </p>
 
@@ -218,7 +225,18 @@
 
                         Facebook's power as a  platform also comes through it's nature as a commodifed platform of surveillance, that profits and benefits from usage, interaction, and capturing of personal data. 
 
-                        A recent update in Apple's iOS 14 now requires users to opt in to Facebook's capturing of personal data that is sold to advertisers to create personalized ads for users. In response, Facebook campaigned to users that because of ads, Facebook is free, admonishing users for not opting-in to personalized ads. The same happened on Facebbo-owned Instagram. This recent example reveals the control and power a platform has, even with measures are put in place to limit their control. 
+
+                        A recent update in Apple's iOS 14 now requires users to opt in to Facebook's capturing of personal data that is sold to advertisers to create personalized ads for users. In response, Facebook campaigned to users that because of ads, Facebook is free, admonishing users for not opting-in to personalized ads. The same happened on Facebbo-owned Instagram. This recent example reveals the control and power a platform has, even with measures are put in place to limit their control.
+
+
+
+                    </p>
+
+                    <br>
+
+                    <p class="text-white-50">
+
+                       In addition to the complexities brought in by the commodification of user data, platforms like Facebook also present a lot of unknowns for the user, because many functions, like algorithims and other platform features are hidden and proprietary. van Dijck et al. (2018) argue that “online activities hide a system whose logic and logistics are about more than facilitating: they actually shape the way we live and how society is organized” (p. 9).
 
 
 
@@ -328,7 +346,6 @@
 
 
                              <br>
-                               <br>
 
                              <p>
 
@@ -499,7 +516,8 @@
                         Acker, Amelia, and Jed R. Brubaker. (2014) Death, Memorialization, and Social Media: A Platform Perspective for Personal Archives. p. 23. Retrieved from: https://archivaria.ca/archivar/index.php/archivaria/article/viewFile/13469/14791
                         </p>
 
-                        <p class="text-white-50">Boyd, d. (2010). “Social network sites as networked publics.” In Papacharissi, Z. (Ed.), A
+
+                        <p class="text-white-50">boyd, d. (2010). “Social network sites as networked publics.” In Papacharissi, Z. (Ed.), A
                             networked self: Identity, community, and culture on social network sites. Retrieved from
                             https://ebookcentral-proquest-com.ezproxy.lib.utexas.edu</p>
                             <br>
@@ -513,6 +531,12 @@
                             Media. Oxford University Press, Retrieved 8 Apr. 2019, from http://www.oxfordscholarship.com.ezproxy.lib.utexas.edu/view/10.1093/acprof:oso/ 9780199970773.001.0001/acprof-9780199970773.
                         </p>
                         <br>
+
+                        <p>van Dijck, J., Poell, T., & de Waal, M. (2018). The Platform Society (Vol. 1). 
+                            https://doi.org/10.1093/oso/9780190889760.001.0001 
+                            </p>
+
+                            <br>
 
                          <p class="text-white-50">
                             https://www.wired.com/story/facebook-ad-tracking-pressure-ios-14-5/
