--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
                     <br>
 
                     <p class="text-white-50">Benjamin Jacobsen (2021) discusses the way facebook is “sculpting digital voids,” governing the way we access information related to social life, memory, and forgetting. Jacobsen (2021) tells the story of Eric Meyer, who was confronted via Facebook’s “Year in Review” feature with an image of his recently deceased daughter. As a result, Facebook responded by creating algorithms that filter out potentially painful memories, like images of lost loved ones. Jacobsen points out that this complicates memory. Jacobsen links platforms with archives and suggest that platforms illustrate the complexities of archiving in a digital world where there is an abundance of data. Jacobsen says: “[t]he challenge for platforms such as Facebook, and features such as Year in Review, is what past data to render useful and meaningful in the present” (363). Facebook’s features, like “Year in Review” or the various memorialization features like “Tributes” are platform affordances that contribute to memory formation. Like more traditional archives, Facebook is asserting a particular power when they decide what users see and don’t see on their platform.</p>
+
                     </p>
                     </div>
                 </div>
@@ -509,6 +510,8 @@
                             Power in Silence. Archivaria, 215–233.</p>
 
                             <br>
+
+                           <p class="text-white-50"> Jacobsen, B. N. (2021). Sculpting digital voids: The politics of forgetting on Facebook. Convergence, 27(2), 357–370. https://doi.org/10.1177/1354856520907390 </p>
 
                             <p class="text-white-50">
                             Lagerkvist, Amanda. (2017). Existential media: toward a theorization of digital thrownness.
