--- a/index.html
+++ b/index.html
@@ -406,7 +406,6 @@
 
                     </p>
 
-                    <br>
 
                     <p>
                         <p class="text-white-50">
@@ -422,6 +421,10 @@
                     <p class="text-white-50">Benjamin Jacobsen (2021) discusses the way facebook is “sculpting digital voids,” governing the way we access information related to social life, memory, and forgetting. Jacobsen (2021) tells the story of Eric Meyer, who was confronted via Facebook’s “Year in Review” feature with an image of his recently deceased daughter. As a result, Facebook responded by creating algorithms that filter out potentially painful memories, like images of lost loved ones. Jacobsen points out that this complicates memory. Jacobsen links platforms with archives and suggest that platforms illustrate the complexities of archiving in a digital world where there is an abundance of data. Jacobsen says: “[t]he challenge for platforms such as Facebook, and features such as Year in Review, is what past data to render useful and meaningful in the present” (363). Facebook’s features, like “Year in Review” or the various memorialization features like “Tributes” are platform affordances that contribute to memory formation. Like more traditional archives, Facebook is asserting a particular power when they decide what users see and don’t see on their platform.</p>
 
                     </p>
+
+
+                     <p>
+                       
                     </div>
                 </div>
             </div>
@@ -433,6 +436,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Affect and "Grief Work"</h2>
+                        
+                        <p class="text-white-50">
+
+
+                         Platforms and archives are spaces that affect memory and that are curated in particular, and often hidden ways. These are spaces where we encounter and navigate various feelings and experiences, positive and negative, good and bad. 
+
+                        </p>
+
+
+                        Speaking in an archival contenct, Marika Cifor describes affect as a “force” that is “unruly,” and is “deeply implicated in how we live, form subjectivities, connect and disconnect, desire, take action, and practice difference, identity, and community” (Cifor 2021, para. 1). 
+
+
                         <p class="text-white-50">
 
 
@@ -510,6 +525,11 @@
                             Power in Silence. Archivaria, 215–233.</p>
 
                             <br>
+
+                           <p class="text-white-50">Cifor, M. (2021). Affect. In N.B. Thylstrup, D. Agostinho, A. Ring, & K. Veel (Eds.), 
+                             Uncertain Archives: Critical Keywords for Big Data. MIT Press. </p>
+
+                        <br>
 
                            <p class="text-white-50"> Jacobsen, B. N. (2021). Sculpting digital voids: The politics of forgetting on Facebook. Convergence, 27(2), 357–370. https://doi.org/10.1177/1354856520907390 </p>
 
