--- a/index.html
+++ b/index.html
@@ -444,8 +444,12 @@
 
                         </p>
 
+                        <p class="text-white-50">
+
 
                         Speaking in an archival contenct, Marika Cifor describes affect as a “force” that is “unruly,” and is “deeply implicated in how we live, form subjectivities, connect and disconnect, desire, take action, and practice difference, identity, and community” (Cifor 2021, para. 1). 
+
+                    </p>
 
 
                         <p class="text-white-50">
