--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Memory and "Archival" Influence</h2>
+                        <h2 class="text-white mb-4">Memory and Archival Influence</h2>
                         <p class="text-white-50">
 
 
