--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                             <p>
 
-                        ****
+                        **** add in info about memorialization archival feature
 
                         </p>
             
