--- a/index.html
+++ b/index.html
@@ -178,13 +178,17 @@
 
                             </p>
 
-                            <p>
+                            <p class="text-white-50">
 
-                        **** add in info about memorialization archival feature
+                      	My sister passed away before this feature was made available, and I didn't realize that in memorializing my sister's account by sending proof of her death ( a link to her obituary ) to a Facebook customer service member, I would be locking down my sister's account. And in my interactions with the Facebook team, there was no indication that this owuld be the case.
+                      </p>
 
-                        </p>
+                      	 <div><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan6.png" alt="..." /></div>
+
+                      	 <div><img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan7.png" alt="..." /></div>
+
             
-                        <p class="text-white-50"> **
+                        <p class="text-white-50"> 
                         </p>
                          <p class="text-white-50">
 
