--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                              <br>
                              <p>
 
-                             <img class="center" src="assets/img/jordan2.png" alt="..."/>  
+                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan2.png" alt="..."/>  
 
                             </p>
 
@@ -313,7 +313,7 @@
 
                             <p>
 
-                             <img class="center" src="assets/img/jordan3.png" alt="..."/>
+                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan3.png" alt="..."/>
 
                                 
 
@@ -332,7 +332,7 @@
                             <p>
                       
 
-                             <img class="center" src="assets/img/jordan4.png" alt="..."/>   
+                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/jordan4.png" alt="..."/>   
 
                             </p>
 
