--- a/index.html
+++ b/index.html
@@ -483,6 +483,10 @@
                            Because of the nature of both Facebook and archives as places of interwoven power and complex navigation and user agency, memory becomes mediated, shaped, and modified. This brings up more questions regarding what becomes part of the archive, who controls it, and who has the right to make these decisions. 
                        </p>
 
+                       <p>
+                       I even ponder, is this project part of a larger archive--the artifacts above that I curated from Facebook posts that are more than five years old, because they are now more publicly accessible in this space, are they canon?  
+                       </p>
+
                        <p class="text-white-50">
                        	
                        </p>
