--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@
 
                        <p>
                        I even ponder, is this project part of a larger archive--the artifacts above that I curated from Facebook posts that are more than five years old, because they are now more publicly accessible in this space, are they canon?  
+
+                       By bringing these memories out of Facebook, and into a less closed-off and more accessible space, are they now part of the canon of the archive? Or should these memories even be removed from their original context? 
                        </p>
 
                        <p class="text-white-50">
