--- a/index.html
+++ b/index.html
@@ -339,11 +339,12 @@
 
                             <br>
                        
-
+                            <div>
                             <p class="text-white-50">
                             And this post too.  
 
                              </p>
+                             </div>
 
                              <br>
                        
