--- a/index.html
+++ b/index.html
@@ -405,7 +405,6 @@
 
                         This is also the case with traditional archives, when creatorship is complex, and many creators may not even know or have consented to their materials being included. 
 
-                        **right to be deleted/forgotten and platform/profile ownership
 
                     </p>
 
@@ -490,7 +489,7 @@
                            Because of the nature of both Facebook and archives as places of interwoven power and complex navigation and user agency, memory becomes mediated, shaped, and modified. This brings up more questions regarding what becomes part of the archive, who controls it, and who has the right to make these decisions. 
                        </p>
 
-                       <p>
+                       <p class="text-white-50">
                        I even ponder, is this project part of a larger archive--the artifacts above that I curated from Facebook posts that are more than five years old, because they are now more publicly accessible in this space, are they canon?  
 
                        By bringing these memories out of Facebook, and into a less closed-off and more accessible space, are they now part of the canon of the archive? Or should these memories even be removed from their original context? 
