--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                         </p>
                         <br>
                         <p class="text-white-50">This represents a restructuring and blending of real-life, reality based—and even religious based—mourning and memory practices with online practices, something that van Dijck (2013) suggests happens generally with the emergence of social networking sites. Online places of memorialization are attempting to mimic some practices of reality, but in effect, are influencing and even changing practices around death on a digital platform infrastructure.</p>
+
+                        <p class="text-white-50">I want to acknowledge that memory practices around death and experiences of grief are personal, and very culturally and individually. This site's header image depicts a woman leaning over a  beehive. This was a mourning practice called "Telling the bees" that faded out of practice by the 1860s. The image is an engraving of the same name by E.K. Johnson. </p>
                     
                     </div>
                 </div>
