--- a/index.html
+++ b/index.html
@@ -485,13 +485,13 @@
                        </p>
 
                        <p class="text-white-50">
-                       I even ponder, is this project part of a larger archive--the artifacts above that I curated from Facebook posts that are more than five years old, because they are now more publicly accessible in this space, are they canon?  
-
-                       By bringing these memories out of Facebook, and into a less closed-off and more accessible space, are they now part of the canon of the archive? Or should these memories even be removed from their original context? 
-                       </p>
+                       I even ponder, is this project part of a larger archive? The artifacts above that I curated from Facebook posts have now been removed from their context, and are more publicly accessible off of Facebook. In this space, are they part of an archive? What does it mean that this site is controlled by GitHub, a platformed space with its own affordances? How does this movement and circulation in and out of Facebook change the archive? But, from the beginning, Facebook's impositions of power and creation of certain affordances and features along with algorithms that control what users see and interact with, carries a role in how memory and grieving processes play out. 
 
                        <p class="text-white-50">
-                       	
+
+                       	 Jacobsen (2020) says that "since the amount of data archived on
+						various social media is bound to grow over time, it is conceivable that platforms will take on an
+						increasingly active role in the remembering of the past" (p. 368). Going forward, as we continue to interact in a world mediated by platforms, the power and control these platforms have changes and increases. Having an awareness of this the power platforms have in our personal and private memories is important as we navigate these spaces. 
                        </p>
       
                     </div>
