--- a/index.html
+++ b/index.html
@@ -611,13 +611,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-                            </div>
+                        
                         </div>
                     </div>
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -633,7 +627,7 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
-                                <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                                <i class="fab fa-twitter"></i>
                                 <h4 class="text-uppercase m-0">Twitter</h4>
                                 <hr class="my-4" />
                                 <div class="small text-black-50">
