--- a/index.html
+++ b/index.html
@@ -647,7 +647,10 @@
 
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright &copy; Your Website 2021</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">This project was made as a final assignment in Dr. Caroline Frick's Media, Memory, and the Archive at the University of Texas School of Information</div>
+        	<br>
+        	<div class="container">Copyright &copy; Bethany Radcliff 2021</div>
+        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
