--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
                             <br>
 
                          <p class="text-white-50">
+                         	Barrett, Brian. (2021). Don’t Buy Into Facebook’s Ad-Tracking Pressure on iOS 14.5. Wired.
                             https://www.wired.com/story/facebook-ad-tracking-pressure-ios-14-5/
                         </p>
                         <br>
