--- a/index.html
+++ b/index.html
@@ -561,7 +561,8 @@
 
         
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section class="about-section text-center" id="about">
+        	<!-- <section class="contact-section bg-black"> -->
             <div class="container">
                
                    <div class="row">
