--- a/index.html
+++ b/index.html
@@ -586,7 +586,12 @@
                                 <div class="small text-black-50">
                                 	<a href="https://twitter.com/bethanycaye">@bethanycaye</a></div>
                             </div>
-                            <div class="card py-4 h-100">
+                            
+                        </div>
+                        </div>
+
+                        <div class="col-md-4 mb-3 mb-md-0">
+                        <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
@@ -594,7 +599,7 @@
                                 <div class="small text-black-50"><a href="#!">bethanyradcliff@gmail.com</a></div>
                             </div>
                         </div>
-                        </div>
+                    </div>
                     </div>
                     </div>
       
