--- a/index.html
+++ b/index.html
@@ -593,11 +593,14 @@
                         <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
-                                <i class="fas fa-envelope text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Email</h4>
+                                <i class="fab fa-twitter"></i>
+                                <h4 class="text-uppercase m-0">Twitter</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">bethanyradcliff@gmail.com</a></div>
+                                <div class="small text-black-50">
+                                	<a href="https://twitter.com/bethanycaye">@bethanycaye</a></div>
                             </div>
+                            
+                        </div>
                         </div>
                     </div>
                     </div>
