--- a/index.html
+++ b/index.html
@@ -594,12 +594,8 @@
                     -->
 
                         <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fab fa-twitter"></i>
-                                <h4 class="text-uppercase m-0">Twitter</h4>
-                                <hr class="my-4" />
-                                <div class="small text-black-50">
+                        		<div class="small text-black-50"><a href="#!">bethanyradcliff@gmail.com</a></div>
+                        
                                 	<a href="https://twitter.com/bethanycaye">@bethanycaye</a></div>
                             </div>
                             
