--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                         <br>
 
-                        <p class="text-white-50"> As social media has become more of a public space, social practices have made their way onto the platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
+                        <p class="text-white-50"> As social media has become more of a public space, social practices have made their way onto platform, and as such, contribute to memory formation and remembrance. This brings with it nuanced interaction and complexities due to this platformed space of multimedia interaction.
                         </p>
                          <p class="text-white-50">
 
@@ -125,7 +125,7 @@
                         <br>
                         <p class="text-white-50">This represents a restructuring and blending of real-life, reality based—and even religious based—mourning and memory practices with online practices, something that van Dijck (2013) suggests happens generally with the emergence of social networking sites. Online places of memorialization are attempting to mimic some practices of reality, but in effect, are influencing and even changing practices around death on a digital platform infrastructure.</p>
 
-                        <p class="text-white-50">I want to acknowledge that memory practices around death and experiences of grief are personal, and very culturally and individually. This site's header image depicts a woman leaning over a  beehive. This was a mourning practice called "Telling the bees" that faded out of practice by the 1860s. The image is an engraving of the same name by E.K. Johnson. </p>
+                        <p class="text-white-50"> This site's header image depicts a woman leaning over a  beehive in a mourning practice called "Telling the bees" that faded out of practice by the 1860s. The image is an engraving of the same name by E.K. Johnson. With this image, I want to acknowledge that memory practices around death and experiences of grief are personal, and vary culturally and individually.</p>
                     
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4"></h2>
                         <p class="text-white-50">
-                            In my own life, I've experienced the way it feels to encounter these materials circulating on Facebook, that bring with them nuanced emotions and affective experiences. 
+                            In my own life, I've experienced the way it feels to encounter materials circulating on Facebook, that bring with them nuanced emotions and affective experiences. 
                         </p>
                         <br>
                         <p class="text-white-50">When my sister passed away in 2015, almost as soon as I learned what had happened, Facebook notifications were pouring in. I was being tagged in posts, images, videos, and in addition people were posting condolences on my sister's Facebook feed.</p>
@@ -148,7 +148,7 @@
                         <br>
                         <p class="text-white-50">I remember having a range of feelings about this experience, from not caring at all, to wanting to tell people not to post anything because Jordan was MY sister, not their sister, to feeling joy at seeing pictures or videos I hadn't seen in years. This presented a very nuanced navigation for me, and many friends and family members.</p>
 
-                        <p class="text-white-50">Even today, 5 years later, my mom still experiences a lot of pain when she is alerted of Facebook memories of my sister.</p>
+                        <p class="text-white-50">Even today, 5 years later, my mom still sometimes experiences pain when she is alerted of Facebook memories of my sister.</p>
                     
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         </p>
                          <p class="text-white-50">
 
-                        Then, in 2019, Facebook advertised a new feature to promote and encourage users to interact with the memorialized pages of lost loved ones. 
+                        In 2019, Facebook advertised a new feature to promote and encourage users to interact with the memorialized pages of lost loved ones. 
 
                         This feature is called the "Tributes" feature, that allows memorialized accounts to have a separate section for users to leave tributes to the lost loved one. 
                     </p>
@@ -209,7 +209,7 @@
 
                     <p class="text-white-50">
 
-                    The introduction of the press release says: 
+                    The introduction of the press release announcing the "Tributes" feature says: 
 
                     "People turn to Facebook to find community during life’s highs and lows. We know the loss of a friend or family member can be devastating — and we want Facebook to be a place where people can support each other while honoring the memory of their loved ones."
 
