--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         Facebook's power as a  platform also comes through it's nature as a commodifed platform of surveillance, that profits and benefits from usage, interaction, and capturing of personal data. 
 
 
-                        A recent update in Apple's iOS 14 now requires users to opt in to Facebook's capturing of personal data that is sold to advertisers to create personalized ads for users. In response, Facebook campaigned to users that because of ads, Facebook is free, admonishing users for not opting-in to personalized ads. The same happened on Facebbo-owned Instagram. This recent example reveals the control and power a platform has, even with measures are put in place to limit their control.
+                        A recent update in Apple's iOS 14 now requires users to opt in to Facebook's capturing of personal data that is sold to advertisers to create personalized ads for users (Barrett 2021). In response, Facebook campaigned to users that because of ads, Facebook is free, admonishing users for not opting-in to personalized ads. The same happened on Facebook-owned Instagram. This recent example reveals the control and power a platform has, even with measures are put in place to limit their control.
 
 
 
@@ -292,7 +292,7 @@
                              <br>
 
                         <p class="text-white-50">
-                             The post below was posted by a friend of my sister's I didn't know. Reading this now, I feel a lot of care and gratitude for my sister's friends in the chronic illness community who knew what she was going through. I feel so much respect for the level of support the friend describes in the post below, and realize how much this community meant to my sister and how much she meant to them. 
+                             The post below was posted by a friend of my sister's I didn't know. Reading this now, I feel a lot of care and gratitude for my sister's friends in the chronic illness community who knew what she was going through. I feel so much respect for the level of support the friend describes in the post below, and realize how much this community meant to my sister and how much she meant to them. At the time of my sister's death though, posts like this could be a challenge to read. 
 
                              </p>
 
@@ -306,7 +306,7 @@
                             <br>
 
                             <p class="text-white-50">
-                             The post below is another example of a post that was shared by a friend of my sister's in her chronic illness community.  
+                             The post below is another example of a post that was shared by a friend of my sister's in her chronic illness community. Seeing the impact my sister had on this community is a memory I'm glad to have. 
 
                              </p>
 
@@ -326,7 +326,7 @@
                        
 
                             <p class="text-white-50">
-                             The following posts are also from friends in the same community.  
+                             The following posts are also from friends in the same community. I remember seeing posts like this and feeling like it wasn't the place of some of these individuals who I had never met to feel like my sister's death was their loss. Now, i appreciate it. 
 
                              </p>
 
